docs/0.2.8/about.md
# About
After hiring several branding and marketing firms for deciding how to name this project, finally we got an agreement on using a name that exactly identifies the purpose of this tool. The selected name was **K**ubernetes **logs**, that is, **Klogs**.

On January 1 2024, the year I started this project, Niklaus Wirth passed by. I quote hereafter some information extracted from its [wikipedia entry](https://en.wikipedia.org/wiki/Niklaus_Wirth).

He was the chief designer of several languages like Euler, in 1965, PL360 (for the mainframe 360 architecture, father of the future PL/I, still in use these days), ALGOL, Pascal (in 1970), Modula and Modula-2, and several versions of Oberon, the last of them, Oberon-07, developed in 2007.

In 1984, he won the Turing Award, generally recognized as the highest distinction in computer science, "for developing a sequence of innovative computer languages".

In 1995, he popularized the adage now named **Wirth's law**. In his 1995 paper "A Plea for Lean Software" he phrased it as *"Software is getting slower more rapidly than hardware becomes faster."* and attributed it to Martin Reiser.

### Turbo Pascal
The first time I worked with structured programming it was by using Borland's Turbo Pascal. I'd been working with imperative spaghetti-code written in BASIC for several years, and moving to procedural structured Pascal was a challenge for me.

So, Klogs project needed a homage name, and it was finally renamed to *K*ubernetes *Wirth*, or ni*K*laus *Wirth*, or **Kwirth**.

### Still learning...
I'm still learning to better programming. Since I started with BASIC on the ZX81 back in 1984 I've been learning and using:

  - BASIC on ZX Spectrum 48K (my very first computer, thanks [Mr. Clive Sinclair](https://en.wikipedia.org/wiki/Clive_Sinclair)), BASIC on AMSTRAD CPC
  - Pascal using Turbo Pascal IDE on my [MS-DOS](https://en.wikipedia.org/wiki/MS-DOS) 3.22 (on my first PC, AMSTRAD PC1512 (yes, 512KB with just one flexible disk drive 5"1/4))
  - COBOL using Ryan McFarland's RMCOBOL on MS-DOS 4
  - Assembler for the 80x86 and assembler on IBM360 processors
  - Forth, Prolog and LISP
  - PL/I on my first water-cooled [3090-200 Model E](https://en.wikipedia.org/wiki/IBM_3090) (still loving it)
  - VB3 (Microsoft's first *usable* version of Visual Basic, a somehow structured basic (without line numbering!!))
  - VB5 (Microsoft's first *usable* version of Visual Basic, including Object Oriented Programming)
  - Java 1.1
  - C# on .NET 1.1 (circa 2001)
  - JavaScript
  - TypeScript (these days... ;)) 

I never worked as a developer, I've been always working on infrastructure and architecture.
