docs/0.5.21/about.md
# About
After hiring several branding and marketing firms for deciding how to name this project, finally we got an agreement on using a name that exactly identifies the purpose of this tool. The selected name was **K**ubernetes **logs**, that is, **Klogs**. That was the original idea behind the product.

On January 1 2024, the year I started this project, Niklaus Wirth passed by. I quote hereafter some information extracted from his [wikipedia entry](https://en.wikipedia.org/wiki/Niklaus_Wirth).

He was the chief designer of several languages like Euler, in 1965, PL360 (for the mainframe 360 architecture, father of the future PL/I, still in use these days), ALGOL, Pascal (in 1970), Modula and Modula-2, and several versions of Oberon, the last of them, Oberon-07, developed in 2007.

In 1984, he won the Turing Award, generally recognized as the highest distinction in computer science, "for developing a sequence of innovative computer languages".

In 1995, he popularized the adage now named **Wirth's law**. In his 1995 paper "A Plea for Lean Software" he phrased it as *"Software is getting slower more rapidly than hardware becomes faster"* and attributed it to Martin Reiser.

## Our logo
In the very first versions of Kwirth, we stylized an old photograph of Niklaus Wirth. Then, we converted it into ASCII art, which is shown on every Kwirth server at start-up, just after displaying the version number and before it starts writing the initialization process message logs.

The logo shown in this documentation is also a B&W-processed photograph of Niklaus Wirth.

In Kwirth 0.5.21, we launched **Magnify**, which has, in fact, a double meaning:

  - **Magnify channel**: A specific Kwirth channel for managing Kubernetes clusters, going beyond just observability.
  - **Kwirth Magnify**: The desktop version of Kwirth, which you can install on your own Windows, macOS, or Linux machine, just as you would do with Lens, K9s, or Headlamp.

Starting with 0.5.21, we have introduced a new logo: a stylized, capitalized 'K' in the **Roy Lichtenstein** style. Why? We love pop-art, and the pieces Lichtenstein created look like watching a comic through a magnifier. Therefore, our *Lichtensteinized* 'K' is from now on the new Kwirth logo.

![kwirthlogo](https://jfvilas.github.io/kwirth/_media/kwirth-last.png ':class=imageclass10')

### Why Lichtenstein?
The connection between **Roy Lichtenstein** and Kwirth Magnify is not accidental. Lichtenstein was a master of the **"Ben-Day dots"** technique. When you look at a comic book with a magnifying glass, you don't see solid colors; you see a matrix of small, individual dots that the eye perceives as a whole.

This is exactly how Kwirth works:
  - **Granularity**: We take the individual "dots" of Kubernetes (logs, metrics, events) and magnify them.
  - **Clarity from Complexity**: Just as Roy transformed "low-art" comic strips into "high-art" gallery pieces by enlarging the detail, Kwirth takes the raw, messy data of a cluster and presents it in a bold, clear, and "pop" visual style.
  - **The "K" Icon**: Our new logo uses those iconic dots and thick black outlines, symbolizing that when you use Kwirth, you are looking at your cluster through a powerful magnifies that makes every detail pop.

## Turbo Pascal
The first time I worked with structured programming it was by using Borland's Turbo Pascal (v3). I'd been working with imperative spaghetti-code written in BASIC for several years, and moving to procedural structured Pascal was challenging for me.

So, Klogs project needed a homage name, and it was finally renamed to *K*ubernetes *Wirth*, or ni*K*laus *Wirth*, or **Kwirth**.

## Still learning...
I'm still learning to better programming. Since I started with BASIC on the ZX81 back in 1984 I've been learning and using:

  - BASIC on ZX Spectrum 48K (my very first computer, thanks [Mr. Clive Sinclair](https://en.wikipedia.org/wiki/Clive_Sinclair)), BASIC on AMSTRAD CPC.
  - Pascal using Turbo Pascal IDE on my [MS-DOS](https://en.wikipedia.org/wiki/MS-DOS) 3.22 (on my first PC, AMSTRAD PC1512 (yes, 512KB with just one flexible disk drive 5"1/4)).
  - COBOL using Ryan McFarland's RMCOBOL on MS-DOS 4.
  - Assembler for the 80x86 and assembler on IBM360 processors.
  - Forth, Prolog and LISP.
  - PL/I on my first water-cooled computer [3090-200 Model E](https://en.wikipedia.org/wiki/IBM_3090) (still loving it).
  - VB3 (Microsoft's first *usable* version of Visual Basic, a somehow structured basic (without line numbering!!)).
  - VB5 (Microsoft's first *usable* version of pseudo-object-oriented Visual Basic).
  - Java 1.1.
  - C# on .NET 1.1 (circa 2001).
  - JavaScript.
  - TypeScript (these days... ;)).

I never worked as a developer, I've been always working on infrastructure and architecture, may be my next life (which is planned to start around 2045) I would rebirth as a full stack developer (when I mean full-stack I  mean really-full stack, from infrastructure to UI).

Last months we've been working on different deployments for Kwirth (Docker, desktop, standalone...). It has been very interesting and we're very very proud of what we have achieved thanks to be using a well-architected and full-stacked approach.
